--- a/admin/src/main/resources/templates/article-list.html
+++ b/admin/src/main/resources/templates/article-list.html
@@ -109,7 +109,8 @@
                 { "data": "img",
                     "bSortable": false,
                     "render": function ( data, type, full, meta ) {
-                        return '<img src="'+ data +'"/>';
+                        return '<div style="width:40px;height:30px;display:inline-block; verticalAlign:middle;marginRight:10px">' +
+							'<a href="'+data+'" target="_blank"><img src="'+data+'" style="width:100%;height:100%;border:none" /></a></div>';
                     }
                 },
                 { "data": "newsDate", "bSortable": false},
