--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -68,11 +68,19 @@
 </header>
 <aside class="Hui-aside">
 	<div class="menu_dropdown bk_2">
-		<dl id="menu-product">
-			<dt><i class="Hui-iconfont">&#xe620;</i> 产品管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+		<dl id="menu-statistic">
+			<dt><i class="Hui-iconfont">&#xe620;</i> 数据统计<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/goods/index" data-title="产品列表" href="javascript:void(0)">产品列表</a></li>
+					<li><a data-href="/admin/statistic/index" data-title="数据统计" href="javascript:void(0)">数据统计</a></li>
+				</ul>
+			</dd>
+	</dl>
+		<dl id="menu-product">
+			<dt><i class="Hui-iconfont">&#xe620;</i> 电子数码管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="/admin/goods/index" data-title="电子数码列表" href="javascript:void(0)">电子数码列表</a></li>
 				</ul>
 			</dd>
 	</dl>
@@ -123,6 +131,46 @@
 			<dd>
 				<ul>
 					<li><a data-href="/admin/wordbook/index" data-title="字典管理" href="javascript:void(0)">字典列表</a></li>
+				</ul>
+			</dd>
+		</dl>
+		<dl id="menu-partner">
+			<dt><i class="Hui-iconfont">&#xe623;</i> 合作伙伴<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="/admin/partner/index" data-title="合作伙伴" href="javascript:void(0)">合作伙伴</a></li>
+				</ul>
+			</dd>
+		</dl>
+		<dl id="menu-branch">
+			<dt><i class="Hui-iconfont">&#xe624;</i> 分公司<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="/admin/branch/index" data-title="分公司" href="javascript:void(0)">分公司列表</a></li>
+				</ul>
+			</dd>
+		</dl>
+		<dl id="menu-school">
+			<dt><i class="Hui-iconfont">&#xe625;</i> 校园代理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="/admin/school/index" data-title="校园代理" href="javascript:void(0)">校园代理</a></li>
+				</ul>
+			</dd>
+		</dl>
+		<dl id="menu-business">
+			<dt><i class="Hui-iconfont">&#xe626;</i> 商家代理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="/admin/business/index" data-title="商家代理" href="javascript:void(0)">商家代理</a></li>
+				</ul>
+			</dd>
+		</dl>
+		<dl id="menu-authority">
+			<dt><i class="Hui-iconfont">&#xe627;</i> 权限管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="/admin/authority/index" data-title="权限管理" href="javascript:void(0)">权限管理</a></li>
 				</ul>
 			</dd>
 		</dl>
