--- a/admin/src/main/resources/templates/product-brand.html
+++ b/admin/src/main/resources/templates/product-brand.html
@@ -21,8 +21,8 @@
 <body>
 <nav class="breadcrumb">
 	<i class="Hui-iconfont">&#xe67f;</i>首页
-	<span class="c-gray en">&gt;</span> 产品管理
-	<span class="c-gray en">&gt;</span> 产品列表
+	<span class="c-gray en">&gt;</span> 电子数码管理
+	<span class="c-gray en">&gt;</span> 电子数码列表
 	<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" >
 		<i class="Hui-iconfont">&#xe68f;</i>
 	</a>
@@ -30,15 +30,15 @@
 <div class="page-container">
 
 	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l">
-		<a class="btn btn-primary radius" data-title="添加类目" onclick="add('新增','/admin/goods/add')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加类目</a></span> </div>
+		<a class="btn btn-primary radius" data-title="添加电子数码" onclick="add('新增','/admin/goods/add')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加电子数码</a></span> </div>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-sort">
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value="" /></th>
 					<th width="70">ID</th>
-					<th width="80">类目名称</th>
-					<th width="200">类目图标</th>
+					<th width="80">电子数码名称</th>
+					<th width="200">电子数码图标</th>
 					<th width="120">是否商品</th>
 					<th width="120">原价</th>
 					<th width="100">操作</th>
